feat(model-cache): add telemetry and tracing for cache operations
Add GatewayTelemetry and GatewayTracing dependencies to ModelCacheService. Enhance cache operations (get, evict) with telemetry recording and tracing spans for monitoring cache hits, misses, refresh operations, and evictions. Includes proper error handling with tracing and multiple constructor overloads for dependency injection.